# ash-hawk

./: --fix  --stat  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASH_HAWK_INTERVIEW.md  CHANGELOG.md  CLAUDE.md  LATEST_RUN_INTERVIEW.md  README.md  SKILL.md  TODOS.md  auth.py  echo  exit  pyproject.toml  pyrightconfig.json  ruff.toml  test-suite.yaml
.ash-hawk/bolt-merlin-codegen-v1/: suite.json
.ash-hawk/complete-example-v1/: suite.json
.ash-hawk/demo/: suite.json
.ash-hawk/improve-cycle/: adversarial_scenarios.json  change_sets.json  checkpoints.json  experiment_plans.json  findings.json  histories.json  lessons.json  promotions.json  proposals.json  role_events.json  runs.json  verifications.json
.ash-hawk/lessons/: lessons.json
.ash-hawk/no-mcp-mini/: suite.json
.ash-hawk/note-lark-mini-abs-python/: suite.json
.ash-hawk/note-lark-mini-bin/: suite.json
.ash-hawk/note-lark-mini-bridge/: suite.json
.ash-hawk/note-lark-mini-timeout-check/: suite.json
.ash-hawk/note-lark-skill-graph-v1/: suite.json
.ash-hawk/note-lark-skill-quality-v1/: suite.json
.ash-hawk/pso-quick-test/: suite.json
.ash-hawk/scenario-batch-03f98f5e/: suite.json
.ash-hawk/scenario-batch-17c917ba/: suite.json
.ash-hawk/scenario-batch-24f3cd07/: suite.json
.ash-hawk/scenario-batch-2699adcb/: suite.json
.ash-hawk/scenario-batch-305bc0a0/: suite.json
.ash-hawk/scenario-batch-415a33f3/: suite.json
.ash-hawk/scenario-batch-55910a5a/: suite.json
.ash-hawk/scenario-batch-608841d9/: suite.json
.ash-hawk/scenario-batch-6af537d3/: suite.json
.ash-hawk/scenario-batch-7122b24a/: suite.json
.ash-hawk/scenario-batch-72809b2f/: suite.json
.ash-hawk/scenario-batch-82c98ea3/: suite.json
.ash-hawk/scenario-batch-8772df5f/: suite.json
.ash-hawk/scenario-batch-8c7cfafd/: suite.json
.ash-hawk/scenario-batch-99dca838/: suite.json
.ash-hawk/scenario-batch-a2636be6/: suite.json
.ash-hawk/scenario-batch-ab171033/: suite.json
.ash-hawk/scenario-batch-f22fdbc2/: suite.json
.ash-hawk/scenario-bolt-merlin/: suite.json
.ash-hawk/scenario-bolt_merlin_goal_management/: suite.json
.ash-hawk/scenario-brief_edge_no_trends/: suite.json
.ash-hawk/scenario-brief_generate_basic/: suite.json
.ash-hawk/scenario-brief_post_generation/: suite.json
.ash-hawk/scenario-coding_agent_smoke/: suite.json
.ash-hawk/scenario-decision_heuristic_fallback/: suite.json
.ash-hawk/scenario-draft_quality_uniqueness/: suite.json
.ash-hawk/scenario-edge_llm_failure/: suite.json
.ash-hawk/scenario-edge_pending_limit_reached/: suite.json
.ash-hawk/scenario-harness/: suite.json
.ash-hawk/scenario-hello_world/: suite.json
.ash-hawk/scenario-policy_budget_hard_stop_judgement/: suite.json
.ash-hawk/scenario-policy_edge_budget_exhaustion/: suite.json
.ash-hawk/scenario-policy_engagement_tier_prioritization/: suite.json
.ash-hawk/scenario-policy_ranking_score_calculation/: suite.json
.ash-hawk/scenario-policy_router_budget_routing_judgement/: suite.json
.ash-hawk/scenario-policy_rules_artifact_judgement/: suite.json
.ash-hawk/scenario-policy_rules_deterministic_baseline/: suite.json
.ash-hawk/scenario-policy_strategy_violation_detection/: suite.json
.ash-hawk/scenario-promoter_scoring_001/: suite.json
.ash-hawk/scenario-pulse_generate_basic/: suite.json
.ash-hawk/scenario-recap_record_metrics/: suite.json
.ash-hawk/scenario-review_parse_valid/: suite.json
.ash-hawk/scenario-skills_tools_mcp_compliance/: suite.json
.ash-hawk/scenario-state_pending_to_approved/: suite.json
.ash-hawk/scenario-state_pending_to_executed/: suite.json
.ash-hawk/scenario-state_pending_to_needs_revision/: suite.json
.ash-hawk/scenario-tick_full_cycle/: suite.json
.ash-hawk/scenario-tmp0ua8s1ow/: suite.json
.ash-hawk/scenario-tmp207aggnp/: suite.json
.ash-hawk/scenario-tmp4v10oamk/: suite.json
.ash-hawk/scenario-tmp60xtnsh1/: suite.json
.ash-hawk/scenario-tmp6frubbk9/: suite.json
.ash-hawk/scenario-tmp7muzc7j5/: suite.json
.ash-hawk/scenario-tmp94mzzf52/: suite.json
.ash-hawk/scenario-tmp9gep2b4o/: suite.json
.ash-hawk/scenario-tmp9r7qaloo/: suite.json
.ash-hawk/scenario-tmp9ybaxes6/: suite.json
.ash-hawk/scenario-tmp_0o1eula/: suite.json
.ash-hawk/scenario-tmpa3wryja6/: suite.json
.ash-hawk/scenario-tmpahumk4zp/: suite.json
.ash-hawk/scenario-tmpazbn71zw/: suite.json
.ash-hawk/scenario-tmpiokevitn/: suite.json
.ash-hawk/scenario-tmpotsseo2_/: suite.json
.ash-hawk/scenario-tmpp5l67bpp/: suite.json
.ash-hawk/scenario-tmpqt6mhrij/: suite.json
.ash-hawk/scenario-tmpri7ugh2k/: suite.json
.ash-hawk/scenario-tmpsx1uwh0d/: suite.json
.ash-hawk/scenario-tmpt0q71rl_/: suite.json
.ash-hawk/scenario-tmpu7gd9spr/: suite.json
.ash-hawk/scenario-tmpuruff4q1/: suite.json
.ash-hawk/scenario-tmpwqbqza22/: suite.json
.ash-hawk/scenario-tmpxd0xfn0j/: suite.json
.ash-hawk/scenario-tmpxeu_2t14/: suite.json
.ash-hawk/scenario-tmpzh9q4wk2/: suite.json
.ash-hawk/scenario-tmpzmwip5in/: suite.json
.ash-hawk/scenario-weekly_pattern_recognition/: suite.json
.ash-hawk/security-review-v1/: suite.json
.dawn-kestrel/skills/: python-bugfix.md
.dawn-kestrel/tools/: apply_patch.txt  read.txt  todoread.txt
.github/workflows/: ci.yml
ash_hawk/: __init__.py  config.py  context.py  dawn_kestrel_skills.py  events.py  tracing.py  types.py
ash_hawk/adapters/: __init__.py  artifact_adapter.py
ash_hawk/agents/: __init__.py  agent_mutator.py  agent_resolver.py  bolt_merlin.py  dawn_kestrel.py  dawn_kestrel_injector.py  improvement.py  iron_rook.py  source_workspace.py  vox_jay.py
ash_hawk/auto_research/: __init__.py  cli.py  (+16 more)
docs/: PHASE2.md  improve-4-layer-memory-spec.md  improve-command-flow.md  spec.md  thin_runtime.md
examples/: pso-quick.yaml
migrations/: add_notifications_table.py
scripts/: analyze_latest_transcript.py  auto_research_policy.sh  check_type_hygiene.py  run_improvement_cycle.py  run_improvement_cycle.sh  test_improvement_cycle.py
tests/: __init__.py  test_config.py  test_context.py  test_events.py  test_tracing.py  test_types.py
(+2753 files in other folders)
